# iced_term

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yml  rust.yml
examples/custom_bindings/: Cargo.toml  README.md
examples/custom_bindings/src/: main.rs
examples/custom_cmd/: Cargo.toml
examples/custom_cmd/src/: main.rs
examples/focus/: Cargo.toml  README.md
examples/focus/src/: main.rs
examples/fonts/: Cargo.toml  README.md
examples/fonts/src/: main.rs
examples/full_screen/: Cargo.toml  README.md
examples/full_screen/src/: main.rs
examples/split_view/: Cargo.toml  README.md
examples/split_view/src/: main.rs
examples/themes/: Cargo.toml  README.md
examples/themes/src/: main.rs
src/: _component.rs  actions.rs  backend.rs  bindings.rs  component.rs  font.rs  keyboard.rs  lib.rs  main.rs  main_bak.rs  settings.rs  subscription.rs  term.rs  terminal.rs  theme.rs  view.rs
src/backend/: mod.rs  pty.rs  pty_v2.rs  renderable_cell.rs  settings.rs
