[package]
name = "iced_term"
description = "Terminal emulator widget powered by ICED framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.6.0"
edition = "2021"
repository = "https://github.com/Harzu/iced_term"
categories = ["gui"]
license = "MIT"

[dependencies]
alacritty_terminal = "0.25.0"
iced = { version = "0.14", features = ["tokio", "canvas", "advanced"] }
tokio = { version = "1.47.1", features = ["full"] }
iced_graphics = "0.14"
iced_core = "0.14"
open = "5.3.2"
anyhow = "1.0.99"
