[workspace]
members = ["examples/*"]

[workspace.dependencies]
iced = "0.14.0"

[package]
name = "iced_term"
description = "Terminal emulator widget powered by ICED framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.7.0"
edition = "2021"
repository = "https://github.com/Harzu/iced_term"
categories = ["gui"]
license = "MIT"

[dependencies]
alacritty_terminal = "0.25.0"
iced = { workspace = true, features = [
    "canvas",
    "lazy",
    "advanced",
] }
tokio = { version = "1.49.0", features = ["full"] }
iced_graphics = { version = "0.14.0", default-features = false }
iced_core = "0.14.0"
open = "5.3.2"
anyhow = "1.0.99"
