[workspace]
members = ["examples/*"]

[workspace.dependencies]
iced = "0.14.0"

[workspace.package]
edition = "2021"
version = "0.7.0"
repository = "https://github.com/Harzu/iced_term"
license = "MIT"

[package]
name = "iced_term"
version.workspace = true
description = "Terminal emulator widget powered by ICED framework and alacritty terminal backend."
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
repository.workspace = true
categories = ["gui"]
license.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal = "0.25.1"
iced = { workspace = true, features = [
    "canvas",
    "lazy",
    "advanced",
] }
tokio = { version = "1.50.0", features = ["full"] }
iced_graphics = { version = "0.14.0", default-features = false }
iced_core = "0.14.0"
open = "5.3.3"
anyhow = "1.0.102"
